--- a/Forge/src/main/resources/META-INF/mods.toml
+++ b/Forge/src/main/resources/META-INF/mods.toml
@@ -1,9 +1,6 @@
 modLoader="javafml"
-loaderVersion="[2,)"
+loaderVersion="[48,)"
 license="LGPL-3.0"
-
-[[mixins]]
-config = "puffish_attributes.mixins.json"
 
 [[mods]]
 modId="puffish_attributes"
@@ -13,16 +10,11 @@ authors="Pufferfish"
 description="Adds more attributes to the game."
 
 [[dependencies.puffish_attributes]]
-modId="neoforge"
-type="required"
-versionRange="[20.4,)"
+modId="forge"
+mandatory=true
+versionRange="[48,)"
 
 [[dependencies.puffish_attributes]]
 modId="minecraft"
-type="required"
-versionRange="[1.20.4,1.21)"
-
-[[dependencies.puffish_attributes]]
-modId="puffish_skills"
-type="incompatible"
-versionRange="(,0.12.0)"
+mandatory=true
+versionRange="[1.20.2,1.20.4)"
