--- a/NeoForge/gradle.properties
+++ b/NeoForge/gradle.properties
@@ -1,4 +1,6 @@
 loom.platform=neoforge
 
+yarn_mappings_patch=1.21+build.4
+
 # Dependencies
-neoforge_version=20.4.237
+neoforge_version=21.0.0-beta
